--- a/generated-joydivision-cover/index.html
+++ b/generated-joydivision-cover/index.html
@@ -23,8 +23,14 @@
 <div class="divider">
 </div>
 
-<div class="container"  id="canvas">
+<div class="container">
+  <div class="row">
+    <div class="col-md-5"  id="canvas">
 
+	</div>
+	<div class="col-md-5" id="buttons">
+    </div>
+  </div>
 </div>
 
 
