link on main page

--- a/home.html
+++ b/home.html
@@ -72,6 +72,15 @@
 	  </br></p>
     </div>
   </div>
+  <div class="row">
+  <div class="col-sm-4">
+	  <h3><p><a href="generated-joydivision-cover/index.html">Album cover generator</a></p></h3>
+	  <img class="img-responsive" src="img/jdup.png" alt="jpud" style="padding:1px;
+   border:1px solid #021a40;">
+      <p style="text-indent : 15px;">My attempt to a challenge about the album cover of Unknown Pleasures.
+	  </br></p>
+    </div>
+  </div>
 </div>
 
 <div class="divider">
