--- a/generated-joydivision-cover/index.html
+++ b/generated-joydivision-cover/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <div class="jumbotron text-center" style="background-size: 100% 140%;text-shadow: 3px 3px 0px #FFFFFF;">
-  <h1> Joy division cover generation </h1>
+  <h2> Unknown pleasures album cover generator </h2>
 </div>
 
 <div class="divider">
