--- a/generated-joydivision-cover/index.html
+++ b/generated-joydivision-cover/index.html
@@ -8,8 +8,9 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
+  <script language="javascript" src="libraries/gif.js"></script>
+  <script language="javascript" src="libraries/gif.worker.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="divisionline.js"></script>
   <script src="../lib/jquery.min.js"></script>
   <script src="../lib/bootstrap.min.js"></script>
   
