added codepen.io link

--- a/generated-joydivision-cover/index.html
+++ b/generated-joydivision-cover/index.html
@@ -40,7 +40,7 @@
 
 
 <div class="container">
-  <p> <a href="../home.html"> Other projects </a> </p>
+  <p> <a href="../home.html"> Other projects </a> /// <a href="https://codepen.io/Bleuj/pen/ALqmXE"> codepen.io version</a> (seems faster on my PC) </p>
 </div>
 
 </body>
