--- a/home.html
+++ b/home.html
@@ -15,16 +15,30 @@
   <h1>Projects presentation page</h1>
 </div>
 
-<div class="container">
-  <p>This page is mainly designed to showcase some <a href="https://p5js.org/">p5.js</a> or <a href="https://processing.org/">Processing</a> projects by E. Jacob</p>
+<div class="container" id="home">
+	<ul class="nav nav-pills">
+	  <li role="presentation" class="active"><a href="#home">Home</a></li>
+	  <li role="presentation"><a href="#p5js">p5.js</a></li>
+	  <li role="presentation" class="disabled"><a href="#processing">Processing</a></li>
+	  <li role="presentation"><a href="#github">Github</a></li>
+	  <li role="presentation"><a href="#about">About</a></li>
+	</ul>
 </div>
+
+<div class="divider">
+</div>
+
+<div class="container">
+  <p>This page is mainly designed to showcase some <a href="https://p5js.org/">p5.js</a> or <a href="https://processing.org/">Processing</a> projects programmed by Étienne Jacob.</p>
+  
+  </div>
 
 <div class="divider">
 </div>
 <div class="divider">
 </div>
 
-<div class="container">
+<div class="container" id="p5js">
 <h2> p5.js projects </h2>
 </div>
 <div class="divider">
@@ -88,7 +102,7 @@
 <div class="divider">
 </div>
 
-<div class="container">
+<div class="container" id="github">
 <h2> Other projects on Github </h2>
 </div>
 <div class="divider">
@@ -128,6 +142,37 @@
 	  </br></p>
     </div>
   </div>
+</div>
+
+<div class="divider">
+</div>
+<div class="divider">
+</div>
+
+<div class="container" id="about">
+<h2> About the author of this page </h2>
+</div>
+<div class="divider">
+</div>
+
+<div class="container">
+I am Étienne Jacob, student at the <a href="http://www.enpc.fr">ENPC</a> (École des Ponts ParisTech) french engineering school in the IMI department (Computer Science and Applied Mathematics).
+
+I like to work on computer science projects during my free time.
+</div>
+
+<div class="divider">
+</div>
+<div class="divider">
+</div>
+
+<div class="container">
+<a href="#top">Go to top</a>
+</div>
+
+<div class="divider">
+</div>
+<div class="divider">
 </div>
 
 </body>
