--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -91,12 +91,12 @@ text-shadow: 0px 0px 3px #FFFFFF,
 	</div>
 	
   <div class="row" id="interaction" style="z-index: 0;width:90%;top: 20px;">
-    <div class="col-sm-3" id="mouse" style="border-radius: 10px;
+    <div class="col-sm-4" id="mouse" style="border-radius: 10px;
     border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;
 	background-color: rgba(255,255,255,0.3);left: 50px;">
     </div>
-	<div class="col-sm-3" id="performance" style="border-radius: 10px;
+	<div class="col-sm-4" id="performance" style="border-radius: 10px;
     border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;
 	background-color: rgba(255,255,255,0.3);left: 50px;">
@@ -127,14 +127,19 @@ text-shadow: 0px 0px 3px #FFFFFF,
 	</div>
 	
 	<div class="row" style="z-index: 0;width:90%;top: 20px;">
-	<div class="col-sm-3" id="rectangle-mode" id="rectangle-mode" style="border-radius: 10px;
+	<div class="col-sm-4" id="rectangle-mode" id="rectangle-mode" style="border-radius: 10px;
     border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;
 	background-color: rgba(255,255,255,0.3);left: 50px;">
     </div>
 	</div>
-	<div class="row" style="z-index: 0;width:90%;top: 20px;">
-	<div class="col-sm-5" id="gradient" style="border-radius: 10px;
+	<div class="row" id="gradient" style="z-index: 0;width:90%;top: 20px;">
+	<div class="col-sm-5" id="gradient1" style="border-radius: 10px;
+    border: 4px solid rgba(0,0,0,0.3);
+    padding: 10px;
+	background-color: rgba(255,255,255,0.3);left: 50px;">
+    </div>
+	<div class="col-sm-5" id="opti" style="border-radius: 10px;
     border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;
 	background-color: rgba(255,255,255,0.3);left: 50px;">
@@ -233,7 +238,12 @@ Then you can define a color gradient from there. So far there is just a method t
  </br>
 <h2><strong>Tricks</strong></h2>
  Resize your window before reloading the page (Reset button) to use smaller resolutions.
- 
+  </br>
+ </br>
+ <h2><strong>Recent changes</strong></h2>
+	- 25/09/2016 : added Traveling Salesman optimization to the custom color gradient, added "Recent changes", fixed bug : changing displayed values of sliders while on pause.
+  </br>
+ </br>
  </p>
 </div>
 <div class="col-md-6" style="border-radius: 10px;
