--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -233,7 +233,8 @@ This mode is the same as the default one, excepted that the particles are drawn 
  </br>
  <h3><strong>Custom color gradient</strong></h3>
 This panel allows you to paint the canvas with your own picture (press pause to have only the picture on the canvas).
-Then you can define a color gradient from there. So far there is just a method that uses 200 points in an ellipse inside the canvas to define the colors.
+Then you can define a color gradient from there by picking points from an ellipse or just randomly to define the colors.
+There's a button to optimize (order) the colors.
  </br>
  </br>
 <h2><strong>Tricks</strong></h2>
@@ -242,6 +243,7 @@ Then you can define a color gradient from there. So far there is just a method t
  </br>
  <h2><strong>Recent changes</strong></h2>
 	- 25/09/2016 : added Traveling Salesman optimization to the custom color gradient, added "Recent changes", fixed bug : changing displayed values of sliders while on pause.
+	- 25/09/2016 : corrected pen style color bug.
   </br>
  </br>
  </p>
