--- a/home.html
+++ b/home.html
@@ -159,6 +159,11 @@
 I am Étienne Jacob, student at the <a href="http://www.enpc.fr">ENPC</a> (École des Ponts ParisTech) french engineering school in the IMI department (Computer Science and Applied Mathematics).
 
 I like to work on computer science projects during my free time.
+</br>
+</br>
+
+<em><strong>Contact :</strong> etin (dot) jacob (at) gmail (dot) com</em>
+
 </div>
 
 <div class="divider">
