--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -294,7 +294,8 @@ There's a button to optimize (order) the colors.
 </div>
   <p> <a href="../home.html"> Other projects </a>
   /// <a href="https://rawgit.com/Bleuje/Rainbow-Code/master/challenges/CC_24_PerlinNoiseFlowField/index.html"> Old version </a>
-  /// <a href="http://uploadedpicturesofnecessity.tumblr.com/post/150595919944">Blog with examples of pictures</a></p>
+  /// <a href="http://uploadedpicturesofnecessity.tumblr.com/post/150595919944">Blog with examples of pictures</a>
+  /// <em><strong>Contact :</strong> etin (dot) jacob (at) gmail (dot) com</em> </p>
 </div>
 
 </body>
