--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
 </div>
 
 <div class="container" id="github">
-<h2> Other projects on Github </h2>
+<h2> Other projects on <a href="https://github.com/Bleuje">Github</a> </h2>
 </div>
 <div class="divider">
 </div>
