--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -245,6 +245,8 @@ There's a button to optimize (order) the colors.
 	- 25/09/2016 : added Traveling Salesman optimization to the custom color gradient, added "Recent changes", fixed bug : changing displayed values of sliders while on pause.
 	</br>
 	- 25/09/2016 : corrected pen style color bug, button "Go !" bug.
+	</br>
+	- 26/09/2016 : added simulated annealing and blur to custom color gradient, added noise to field magnitude.
   </br>
  </br>
  </p>
