added bias display + rescaled torus

--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -248,6 +248,8 @@ There's a button to optimize (order) the colors.
 	</br>
 	- 26/09/2016 : added simulated annealing and blur to custom color gradient, added noise to field magnitude.
   </br>
+  	- 26/09/2016 : added field view, rescaled field generation on a torus.
+  </br>
  </br>
  </p>
 </div>
