--- a/colorgradient-extraction/index.html
+++ b/colorgradient-extraction/index.html
@@ -82,7 +82,7 @@
 
 
 <div class="container">
-  <p> <a href="../home.html"> Other projects </a> </p>
+  <p> <a href="../index.html"> Other projects </a> </p>
 </div>
 
 
