--- a/spinning-shapes/index.html
+++ b/spinning-shapes/index.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="container">
-  <p> <a href="../home.html"> Other projects </a> </p>
+  <p> <a href="../index.html"> Other projects </a> </p>
 </div>
 
 </body>
