added new project + simplifications to vertor field drawing

--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -68,7 +68,7 @@
 
 <div class="container" style="color: #000000;
 text-shadow: 0px 0px 3px #FFFFFF,
-			0px 0px 5px #FFFFFF, 
+			0px 0px 5px #FFFFFF,0px 0px 5px #FFFFFF, 
                0px 0px 10px #FFFFFF, 
                0px 0px 10px #FFFFFF;
 			   font-family: 'Josefin Sans', arial, sans-serif;">
