--- a/double-cameraview-distortion/index.html
+++ b/double-cameraview-distortion/index.html
@@ -43,6 +43,17 @@
   <p> <a href="../index.html"> Other projects </a> </p>
 </div>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-84856542-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
 
