--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -139,7 +139,12 @@ text-shadow: 0px 0px 3px #FFFFFF,
     padding: 10px;
 	background-color: rgba(255,255,255,0.3);left: 50px;">
     </div>
-	<div class="col-sm-5" id="opti" style="border-radius: 10px;
+	<div class="col-sm-3" id="opti" style="border-radius: 10px;
+    border: 4px solid rgba(0,0,0,0.3);
+    padding: 10px;
+	background-color: rgba(255,255,255,0.3);left: 50px;">
+    </div>
+	<div class="col-sm-3" id="postp" style="border-radius: 10px;
     border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;
 	background-color: rgba(255,255,255,0.3);left: 50px;">
@@ -249,6 +254,8 @@ There's a button to optimize (order) the colors.
 	- 26/09/2016 : added simulated annealing and blur to custom color gradient, added noise to field magnitude.
   </br>
   	- 26/09/2016 : added field view, rescaled field generation on a torus.
+  </br>
+    - 27/09/2016 : added Taubin smoothing in color gradient post-processing.
   </br>
  </br>
  </p>
