added google analytics

--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -255,7 +255,7 @@ There's a button to optimize (order) the colors.
   </br>
   	- 26/09/2016 : added field view, rescaled field generation on a torus.
   </br>
-    - 27/09/2016 : added Taubin smoothing in color gradient post-processing.
+    - 27/09/2016 : added Taubin smoothing in color gradient post-processing. Circle view of color gradient.
   </br>
  </br>
  </p>
