--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -257,6 +257,8 @@ There's a button to optimize (order) the colors.
   </br>
     - 27/09/2016 : added Taubin smoothing in color gradient post-processing. Circle view of color gradient.
   </br>
+	- 28/09/2016 : debugged Taubin smoothing in color gradient post-processing. Clearer circle view of color gradient.
+  </br>
  </br>
  </p>
 </div>
