text in color gradient project

--- a/colorgradient-extraction/index.html
+++ b/colorgradient-extraction/index.html
@@ -21,6 +21,7 @@
 
 <div class="container" id="line1">
   <p>A project about finding automatically a cycling color gradient from a picture.
+  This led to the color gradient extraction panel in the "Vector field drawing" project. It has now more advanced options there although the application is different.
 	</br> </p>
 </div>
 
