better description for google

--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   
   <title> Vector field drawing </title>
+  <meta name="description" content="Draw beautiful things with this interective drawing tool based on moving particles !" />
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../lib/bootstrap.min.css">
