--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <title>Projects presentation</title>
+  
+  <meta name="description" content="Presentation of computer science projects by Etienne Jacob" />
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="lib/bootstrap.min.css">
