--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
       <p style="text-indent : 15px;">My attempt to a challenge about the album cover of Unknown Pleasures.
 	  </br></p>
     </div>
+	
+		<div class="col-sm-4">
+	  <h3><p><a href="dark-side-moon/index.html">Dark Side of the Moon sketch</a></p></h3>
+	  <img class="img-responsive" src="img/darkside.png" alt="darkside" style="padding:1px;
+   border:1px solid #021a40;">
+      <p style="text-indent : 15px;">My quick attempt to a challenge about the album cover of the Dark Side of the Moon.
+	  </br></p>
+    </div>
   </div>
 
 </div>
