reorganized homepage + nndriver

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<ul class="nav nav-pills">
 	  <li role="presentation" class="active"><a href="#home">Home</a></li>
 	  <li role="presentation"><a href="#p5js">p5.js</a></li>
-	  <li role="presentation" class="disabled"><a href="#processing">Processing</a></li>
+	  <li role="presentation"><a href="#processing">Processing contests</a></li>
 	  <li role="presentation"><a href="#github">Github</a></li>
 	  <li role="presentation"><a href="#about">About</a></li>
 	</ul>
@@ -90,6 +90,32 @@
     </div>
 	
 	<div class="col-sm-4">
+      <h3><a href="neural-network-driver/index.html">Neural network driver</a></h3>
+	  
+	  <img class="img-responsive" src="img/nndriving.png" alt="starry night" style="padding:1px;
+   border:1px solid #021a40;">
+	  
+      <p  style="text-indent : 15px;"> A little neural network that drives through checkpoints (the second checkpoint to take influences the driving line).
+	  </br></p>
+    </div>
+</div>
+
+</div>
+
+<div class="divider">
+</div>
+<div class="divider">
+</div>
+
+<div class="container" id="processing">
+<h2> Processing contests</h2>
+</div>
+<div class="divider">
+</div>
+
+<div class="container">
+  <div class="row">
+	<div class="col-sm-4">
 	  <h3><p><a href="generated-joydivision-cover/index.html">Album cover generator</a></p></h3>
 	  <img class="img-responsive" src="img/jdup.png" alt="jpud" style="padding:1px;
    border:1px solid #021a40;">
@@ -105,9 +131,8 @@
 	  </br></p>
     </div>
   </div>
-
 </div>
-
+  
 <div class="divider">
 </div>
 <div class="divider">
