--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
       <p  style="text-indent : 15px;"> A little neural network that drives through checkpoints (the second checkpoint to take influences the driving line).
 	  </br></p>
     </div>
+	
+	<div class="col-sm-4">
+      <h3><a href="waves-integration/index.html">2D-Waves integration (beta)</a></h3>
+	  
+      <p  style="text-indent : 15px;"> Quick sketch by copying an old code I had written in OCaml.
+	  </br></p>
+    </div>
 </div>
 
 </div>
