--- a/waves-integration/index.html
+++ b/waves-integration/index.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="container">
-  Beta. Click to provoke waves. Epilepsy warning.
+  Beta. Click to provoke waves. Epilepsy warning (it's a simple Euler integration scheme and it's not always stable).
 </div>
 
 <div class="divider">
