--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<div class="col-sm-4">
       <h3><a href="neural-network-driver/index.html">Neural network driver</a></h3>
 	  
-	  <img class="img-responsive" src="img/nndriving.png" alt="starry night" style="padding:1px;
+	  <img class="img-responsive" src="img/nndriving.png" alt="nndriving" style="padding:1px;
    border:1px solid #021a40;">
 	  
       <p  style="text-indent : 15px;"> A little neural network that drives through checkpoints (the second checkpoint to take influences the driving line).
@@ -100,9 +100,12 @@
     </div>
 	
 	<div class="col-sm-4">
-      <h3><a href="waves-integration/index.html">2D-Waves integration (beta)</a></h3>
+      <h3><a href="waves-integration/index.html">2D-Waves integration</a></h3>
 	  
-      <p  style="text-indent : 15px;"> Quick sketch by copying an old code I had written in OCaml.
+	  	  <img class="img-responsive" src="img/2dwave.png" alt="2dwave" style="padding:1px;
+   border:1px solid #021a40;">
+	  
+      <p  style="text-indent : 15px;"> Quick sketch mainly made by copying an old code I had written in OCaml.
 	  </br></p>
     </div>
 </div>
