--- a/neural-network-driver/index.html
+++ b/neural-network-driver/index.html
@@ -27,6 +27,7 @@
  and change its orientation with a maximum difference of 18 degrees. The speed is multiplied by 0.85 at each turn (friction).</p>
   <p>This bot makes decisions using a neural network (more information below) trained by supervised learning.
   I have many versions (many weights) and I'm afraid this is really not the best, but at least it works !</p>
+  <p style="color: red">04/10/2016 Update : there was a big bug about the angle constraint, now it's more difficult and more realistic</p>
 </div>
 
 <div class="divider">
