rocket opti added

--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
       <p  style="text-indent : 15px;"> Quick sketch mainly made by copying an old code I had written in OCaml.
 	  </br></p>
     </div>
+	
+	<div class="col-sm-4">
+      <h3><a href="rocket-optimization/index.html">Rocket optimization</a></h3>
+	  
+	  	  <img class="img-responsive" src="img/evol.png" alt="evol" style="padding:1px;
+   border:1px solid #021a40;">
+	  
+      <p  style="text-indent : 15px;"> Optimization of a rocket trajectory using an evolutionary algorithm.
+	  </br></p>
+    </div>
 </div>
 
 </div>
