rocket opti added

--- a/rocket-optimization/index.html
+++ b/rocket-optimization/index.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="container">
-  Optimization of a rocket trajectory with an evolutionary algorithm : Rockets can change their thrust and a little their angle at each time step.
+  Optimization of a rocket trajectory with an evolutionary algorithm (which means there are mutations and a selection). Rockets can change their thrust and a little their angle at each time step.
 </div>
 
 <div class="divider">
