red border and comment

--- a/index.html
+++ b/index.html
@@ -82,18 +82,24 @@
 	  
 	  <img class="img-responsive" src="colorgradient-extraction/imgsamples/snight.jpg" alt="starry night" style="padding:1px;
    border:1px solid #021a40;">
+   
+   <p></br></p>
 	  
       <p  style="text-indent : 15px;"> "Vector field drawing" taught me that color gradients can have a great influence on the "beauty" of randomly generated things.
 	I had the idea of generating color gradients from pictures, and that's what this project is about.
 	There are currently two applications of gradients : balls moving randomly while drawing and some effects on webcam captures.
 	  </br></p>
     </div>
+	</div>
 	
+	<div class="row">
 	<div class="col-sm-4">
       <h3><a href="neural-network-driver/index.html">Neural network driver</a></h3>
 	  
 	  <img class="img-responsive" src="img/nndriving.png" alt="nndriving" style="padding:1px;
    border:1px solid #021a40;">
+   
+   <p></br></p>
 	  
       <p  style="text-indent : 15px;"> A little neural network that drives through checkpoints (the second checkpoint to take influences the driving line).
 	  </br></p>
@@ -104,6 +110,8 @@
 	  
 	  	  <img class="img-responsive" src="img/2dwave.png" alt="2dwave" style="padding:1px;
    border:1px solid #021a40;">
+   
+   <p></br></p>
 	  
       <p  style="text-indent : 15px;"> Quick sketch mainly made by copying an old code I had written in OCaml.
 	  </br></p>
@@ -114,6 +122,8 @@
 	  
 	  	  <img class="img-responsive" src="img/evol.png" alt="evol" style="padding:1px;
    border:1px solid #021a40;">
+   
+   <p></br></p>
 	  
       <p  style="text-indent : 15px;"> Optimization of a rocket trajectory using an evolutionary algorithm.
 	  </br></p>
@@ -139,7 +149,8 @@
 	  <h3><p><a href="generated-joydivision-cover/index.html">Album cover generator</a></p></h3>
 	  <img class="img-responsive" src="img/jdup.png" alt="jpud" style="padding:1px;
    border:1px solid #021a40;">
-      <p style="text-indent : 15px;">My attempt to a challenge about the album cover of Unknown Pleasures.
+   <p></br></p>
+      <p style="text-indent : 15px;">My attempt to a little challenge about the album cover of Unknown Pleasures (won it).
 	  </br></p>
     </div>
 	
@@ -147,7 +158,8 @@
 	  <h3><p><a href="dark-side-moon/index.html">Dark Side of the Moon sketch</a></p></h3>
 	  <img class="img-responsive" src="img/darkside.png" alt="darkside" style="padding:1px;
    border:1px solid #021a40;">
-      <p style="text-indent : 15px;">My quick attempt to a challenge about the album cover of the Dark Side of the Moon.
+   <p></br></p>
+      <p style="text-indent : 15px;">My quick attempt to a little challenge about the album cover of the Dark Side of the Moon (won it).
 	  </br></p>
     </div>
   </div>
