new rocket optimization page

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 	
 	<div class="col-sm-4">
-      <h3><a href="rocket-optimization/index.html">Rocket optimization</a></h3>
+      <h3><a href="rocket-optimization/index.html">Rocket optimization 1</a></h3>
 	  
 	  	  <img class="img-responsive" src="img/evol.png" alt="evol" style="padding:1px;
    border:1px solid #021a40;">
@@ -126,6 +126,20 @@
    <p></br></p>
 	  
       <p  style="text-indent : 15px;"> Optimization of a rocket trajectory using an evolutionary algorithm.
+	  </br></p>
+    </div>
+</div>
+
+<div class="row">
+	<div class="col-sm-4">
+      <h3><a href="rocket-optimization-sa/index.html">Rocket optimization 2</a></h3>
+	  
+	  	  <img class="img-responsive" src="img/SA-rocket2.png" alt="evol" style="padding:1px;
+   border:1px solid #021a40;">
+   
+   <p></br></p>
+	  
+      <p  style="text-indent : 15px;"> Optimization of a rocket trajectory using simulated annealing.
 	  </br></p>
     </div>
 </div>
