--- a/rocket-optimization-sa/index.html
+++ b/rocket-optimization-sa/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title> Rocket optimization 1 </title>
+  <title> Rocket optimization 2 </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../lib/bootstrap.min.css">
@@ -16,11 +16,11 @@
 <body>
 
 <div class="jumbotron text-center" style="background-size: 100% 140%;text-shadow: 3px 3px 0px #FFFFFF;">
-  <h2> Rocket optimization 1 </h2>
+  <h2> Rocket optimization 2 </h2>
 </div>
 
 <div class="container">
-  Optimization of a rocket trajectory with an <a href="https://en.wikipedia.org/wiki/Evolution_strategy">evolutionary algorithm</a> (which means there are mutations and a selection based on a score/evaluation). Rockets can change their thrust and a little their angle at each time step.
+  Optimization of a rocket trajectory by <a href="https://en.wikipedia.org/wiki/Simulated_annealing">simulated annealing</a>. Rockets can change their thrust and a little their angle at each time step. Samples of rockets that are simulated during the search are shown.
 </div>
 
 <div class="divider">
