--- a/rocket-optimization/index.html
+++ b/rocket-optimization/index.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="container">
-  Optimization of a rocket trajectory with an <a href="https://en.wikipedia.org/wiki/Evolution_strategy">evolutionary algorithm</a> (which means there are mutations and a selection based on a score/evaluation). Rockets can change their thrust and a little their angle at each time step.
+  Optimization of a rocket trajectory with an <a href="https://en.wikipedia.org/wiki/Evolution_strategy">evolutionary algorithm</a> (which means there are mutations and a selection based on a score/evaluation). Rockets can change their thrust and a little their angle at each time step. You can reset rockets if it fails without making progress.
 </div>
 
 <div class="divider">
