--- a/rocket-optimization-sa/index.html
+++ b/rocket-optimization-sa/index.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="container">
-  Optimization of a rocket trajectory by <a href="https://en.wikipedia.org/wiki/Simulated_annealing">simulated annealing</a>. Rockets can change their thrust and a little their angle at each time step. Samples of rockets that are simulated during the search are shown.
+  Optimization of a rocket trajectory by <a href="https://en.wikipedia.org/wiki/Simulated_annealing">simulated annealing</a>. Rockets can change their thrust and a little their angle at each time step. Samples of rockets that are simulated during the search are shown. You can reset rockets if doesn't reach the target quickly.
 </div>
 
 <div class="divider">
