--- a/index.html
+++ b/index.html
@@ -142,6 +142,18 @@
       <p  style="text-indent : 15px;"> Optimization of a rocket trajectory using simulated annealing.
 	  </br></p>
     </div>
+	
+	<div class="col-sm-4">
+      <h3><a href="mandalas/index.html">Mandala drawing</a></h3>
+	  
+	  	  <img class="img-responsive" src="img/mandala.png" alt="mand" style="padding:1px;
+   border:1px solid #021a40;">
+   
+   <p></br></p>
+	  
+      <p  style="text-indent : 15px;"> A simple drawing tool.
+	  </br></p>
+    </div>
 </div>
 
 </div>
