mandalas : more alpha + instructions

--- a/mandalas/index.html
+++ b/mandalas/index.html
@@ -19,6 +19,12 @@
   <h1> Mandala drawing </h1>
 </div>
 
+<div class="container"  id="instructions">
+	Click to draw things...
+</div>
+
+<div class="divider">
+</div>
 
 <div class="container"  id="canvas">
 
