examples + default paramters change

--- a/mandalas/index.html
+++ b/mandalas/index.html
@@ -47,6 +47,18 @@
 </div>
 
 <div class="container">
+
+<p> Examples </p>
+
+<img class="img-responsive" src="mandala1.png" alt="mand1" style="padding:1px;
+   border:1px solid #021a40;">
+
+ <img class="img-responsive" src="mandala2.png" alt="mand2" style="padding:1px;
+   border:1px solid #021a40;">
+   
+</div>
+   
+<div class="container">
   <p> <a href="../index.html"> Other projects </a> </p>
 </div>
 
