layout and parameters

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	<div class="col-sm-4">
       <h3><a href="mandalas/index.html">Mandala drawing</a></h3>
 	  
-	  	  <img class="img-responsive" src="img/mandala.png" alt="mand" style="padding:1px;
+	  	  <img class="img-responsive" src="mandalas/mandala1.png" alt="mand" style="padding:1px;
    border:1px solid #021a40;">
    
    <p></br></p>
