--- a/mandalas/index.html
+++ b/mandalas/index.html
@@ -57,6 +57,11 @@
    border:1px solid #021a40;">
    
 </div>
+
+<div class="divider">
+</div>
+<div class="divider">
+</div>
    
 <div class="container">
   <p> <a href="../index.html"> Other projects </a> </p>
