added random walker

--- a/mandalas/index.html
+++ b/mandalas/index.html
@@ -36,7 +36,11 @@
     </div>
 	
     <div class="col-sm-4" id="settings">
-      <h3>Settings</h3>
+      <h3>Global settings</h3>
+    </div>
+	
+	<div class="col-sm-4" id="psettings">
+      <h3>Particle settings</h3>
     </div>
   </div>
 </div>
