polygon mode added

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	
 		<div class="col-sm-4">
 	  <h3><p><a href="dark-side-moon/index.html">Dark Side of the Moon sketch</a></p></h3>
-	  <img class="img-responsive" src="img/darkside.png" alt="darkside" style="padding:1px;
+	  <img class="img-responsive" src="img/darkside2.gif" alt="darkside" style="padding:1px;
    border:1px solid #021a40;">
    <p></br></p>
       <p style="text-indent : 15px;">My quick attempt to a little challenge about the album cover of the Dark Side of the Moon (won it).
