--- a/index.html
+++ b/index.html
@@ -155,6 +155,18 @@
       <p  style="text-indent : 15px;"> A simple drawing tool.
 	  </br></p>
     </div>
+	
+		<div class="col-sm-4">
+      <h3><a href="mandalas/index.html">Grid distortion</a></h3>
+	  
+	  	  <img class="img-responsive" src="img/griddistortion.png" alt="grid" style="padding:1px;
+   border:1px solid #021a40;">
+   
+   <p></br></p>
+	  
+      <p  style="text-indent : 15px;"> An interactive sketch about a spring based grid I made for a GIF.
+	  </br></p>
+    </div>
 </div>
 
 </div>
