--- a/grid-distortion/index.html
+++ b/grid-distortion/index.html
@@ -17,6 +17,8 @@
 
 <div class="jumbotron text-center" style="background-size: 100% 140%;text-shadow: 3px 3px 0px #FFFFFF;">
   <h1> Grid distortion </h1>
+  
+  Click to distort the grid.
 </div>
 
 <div class="divider">
