--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </div>
 	
 		<div class="col-sm-4">
-      <h3><a href="mandalas/index.html">Grid distortion</a></h3>
+      <h3><a href="grid-distortion/index.html">Grid distortion</a></h3>
 	  
 	  	  <img class="img-responsive" src="img/griddistortion.png" alt="grid" style="padding:1px;
    border:1px solid #021a40;">
