--- a/dataviz/index.html
+++ b/dataviz/index.html
@@ -8,8 +8,9 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
-  <script language="javascript" src="https://unpkg.com/papaparse@5.1.0/papaparse.min.js"></script>
-  <script language="javascript" src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+  <script language="javascript" src="libraries/papaparse.js"></script>
+  <!-- <script language="javascript" src="https://unpkg.com/papaparse@5.1.0/papaparse.min.js"></script> 
+  <script language="javascript" src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script> -->
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <script language="javascript" type="text/javascript" src="algae.js"></script>
   <script language="javascript" type="text/javascript" src="particles.js"></script>
