--- a/Hydroviz/index.html
+++ b/Hydroviz/index.html
@@ -9,6 +9,8 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
+  <script language="javascript" src="libraries/papaparse.js"></script>
+  
   <script src="lib/jquery.min.js"></script>
   <script src="lib/bootstrap.min.js"></script>
 
