--- a/Hydroviz/data.html
+++ b/Hydroviz/data.html
@@ -38,6 +38,7 @@
       <div class="row">
         <div class="col-md-5"  id="selector"></div>
         <div class="col-md-5"  id="canvas"></div>
+		<div class="col-md-5"  id="diagnostic"><p> Etat écologique : <h5>BON</h5> </p></div>
       </div>
     </div>
 
