--- a/Hydroviz/data.html
+++ b/Hydroviz/data.html
@@ -39,6 +39,7 @@
         <div class="col-md-5"  id="selector"></div>
 		<div class="col-md-5"  id="diagnostic"><h5>Etat écologique : BON</h5> </div>
         <div class="col-md-5"  id="canvas"></div>
+		<div class="col-md-5"  id="divButton"></div>
       </div>
     </div>
 
