--- a/Hydroviz/data.html
+++ b/Hydroviz/data.html
@@ -51,7 +51,7 @@
 
     <a href="info.html" style="text-decoration: none;">Découvrez la rade</a>
 
-    <a href="" style="text-decoration: none;">Contacts</a>
+    <a href="contact.html" style="text-decoration: none;">Contacts</a>
 
   </div>
 
