--- a/Hydroviz/contact.html
+++ b/Hydroviz/contact.html
@@ -23,15 +23,30 @@
 
   Réalise lors du Ocean Hackathon 2019 par :
   
+  </br>
+  </br>
+  
   Aelaig Corunez - Réalisation du code html/css - aelaig.cournez(at)gmail.com
+  
+  </br>
   
   Etienne Jacob - Implémentation de la visualisation en javascript et chargement des données - etin.jacob(at)gmail.com
   
+  </br>
+  
   Clément Dours - Acquisition et traitement des données - clement.dours98(at)gmail.com
+  
+  </br>
   
   Laure Vandenbeuck - Idées pour la visualisation, design graphique, préparation du pitch
   
+  </br>
+  
   Romain Vandenbeuck - Idées pour la visualisation, préparation du pitch et du business model - romain.vdb76(at)hotmail.com
+  
+  </br>
+  
+  Sur un défi conduit par Peggy Rimmelin-Maury
 
   <div id="summary">
 
