--- a/Hydroviz/contact.html
+++ b/Hydroviz/contact.html
@@ -21,7 +21,7 @@
 
 <div id="allBody">
 
-  Réalise lors du Ocean Hackathon 2019 par :
+  Réalisé lors du Ocean Hackathon 2019 par :
   
   </br>
   </br>
@@ -30,7 +30,7 @@
   
   </br>
   
-  Etienne Jacob - Implémentation de la visualisation en javascript et chargement des données - etin.jacob(at)gmail.com
+  Etienne Jacob - Implémentation de la visualisation et du chargement des données en javascript - etin.jacob(at)gmail.com
   
   </br>
   
