--- a/Hydroviz/contact.html
+++ b/Hydroviz/contact.html
@@ -38,7 +38,7 @@
   
   </br>
   
-  Laure Vandenbeuck - Idées pour la visualisation, design graphique, préparation du pitch
+  Laure Vandenbeuck - Idées pour la visualisation, design graphique, préparation du pitch - Laure.vdb9(at)gmail.com
   
   </br>
   
