--- a/Hydroviz/contact.html
+++ b/Hydroviz/contact.html
@@ -26,7 +26,7 @@
   </br>
   </br>
   
-  Aelaig Corunez - Réalisation du code html/css - aelaig.cournez(at)gmail.com
+  Aelaig Cournez - Réalisation du code html/css - aelaig.cournez(at)gmail.com
   
   </br>
   
